Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8704

RPC sent inside mdd_create transaction.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • None
    • Lustre 2.9.0
    • None
    • 3
    • 9223372036854775807

      We should avoid sending RPC inside the transaction.

      13:55:02:[  379.880842] Lustre: DEBUG MARKER: == sanity test 2: mkdir; touch; rmdir; check file ==================================================== 13:54:59 (1476305699)
      13:55:02:[  380.160834] LustreError: 6841:0:(client.c:2881:ptlrpc_queue_wait()) ASSERTION( get_current()->journal_info == ((void *)0) ) failed: 
      13:55:02:[  380.170698] LustreError: 6841:0:(client.c:2881:ptlrpc_queue_wait()) LBUG
      13:55:02:[  380.174895] Pid: 6841, comm: mdt00_001
      13:55:02:[  380.176601] 
      13:55:02:[  380.176601] Call Trace:
      13:55:02:[  380.179634]  [<ffffffffa06ba7d3>] libcfs_debug_dumpstack+0x53/0x80 [libcfs]
      13:55:02:[  380.184449]  [<ffffffffa06bad75>] lbug_with_loc+0x45/0xc0 [libcfs]
      13:55:02:[  380.186288]  [<ffffffffa0a1310c>] ptlrpc_queue_wait+0x20c/0x270 [ptlrpc]
      13:55:02:[  380.188200]  [<ffffffffa06934e4>] fld_client_rpc+0x104/0x530 [fld]
      13:55:02:[  380.190107]  [<ffffffffa069827f>] fld_server_lookup+0x15f/0x320 [fld]
      13:55:02:[  380.191885]  [<ffffffffa0e4fdf7>] lod_fld_lookup+0x327/0x510 [lod]
      13:55:02:[  380.193825]  [<ffffffffa0e577dc>] lod_generate_and_set_lovea+0x40c/0x810 [lod]
      13:55:02:[  380.195666]  [<ffffffffa0e6be0e>] lod_striping_create+0x19e/0x1e0 [lod]
      13:55:02:[  380.197640]  [<ffffffffa0e6c032>] lod_object_create+0x1e2/0x200 [lod]
      13:55:02:[  380.199501]  [<ffffffffa0ed04d5>] mdd_object_create_internal+0xb5/0x280 [mdd]
      13:55:02:[  380.201606]  [<ffffffffa0ebce75>] mdd_object_create+0x75/0xb80 [mdd]
      13:55:02:[  380.203426]  [<ffffffffa0ec7605>] ? mdd_declare_create+0x535/0xdf0 [mdd]
      13:55:02:[  380.205406]  [<ffffffffa0ec8b2e>] mdd_create+0xc6e/0x1270 [mdd]
      13:55:02:[  380.207108]  [<ffffffffa0da9fcb>] mdt_reint_open+0x223b/0x31a0 [mdt]
      13:55:02:[  380.208957]  [<ffffffffa0d9f480>] mdt_reint_rec+0x80/0x210 [mdt]
      13:55:02:[  380.210619]  [<ffffffffa0d81da2>] mdt_reint_internal+0x5b2/0x9b0 [mdt]
      13:55:02:[  380.212432]  [<ffffffffa0d82302>] mdt_intent_reint+0x162/0x430 [mdt]
      13:55:02:[  380.214072]  [<ffffffffa0d8cb7c>] mdt_intent_policy+0x5bc/0xbb0 [mdt]
      13:55:02:[  380.215883]  [<ffffffffa09d01e7>] ldlm_lock_enqueue+0x387/0x970 [ptlrpc]
      13:55:02:[  380.217555]  [<ffffffffa09f9303>] ldlm_handle_enqueue0+0x9c3/0x1680 [ptlrpc]
      13:55:02:[  380.219414]  [<ffffffffa0a20f50>] ? lustre_swab_ldlm_request+0x0/0x30 [ptlrpc]
      13:55:02:[  380.221180]  [<ffffffffa0a79c12>] tgt_enqueue+0x62/0x210 [ptlrpc]
      13:55:02:[  380.222948]  [<ffffffffa0a7e075>] tgt_request_handle+0x915/0x1320 [ptlrpc]
      13:55:02:[  380.224791]  [<ffffffffa0a29feb>] ptlrpc_server_handle_request+0x21b/0xa90 [ptlrpc]
      13:55:02:[  380.226730]  [<ffffffffa0a27ba8>] ? ptlrpc_wait_event+0x98/0x340 [ptlrpc]
      13:55:02:[  380.228547]  [<ffffffff810b8952>] ? default_wake_function+0x12/0x20
      13:55:02:[  380.230351]  [<ffffffff810af0b8>] ? __wake_up_common+0x58/0x90
      13:55:02:[  380.231951]  [<ffffffffa0a2e0a0>] ptlrpc_main+0xaa0/0x1de0 [ptlrpc]
      13:55:02:[  380.233724]  [<ffffffffa0a2d600>] ? ptlrpc_main+0x0/0x1de0 [ptlrpc]
      13:55:02:[  380.235241]  [<ffffffff810a5b8f>] kthread+0xcf/0xe0
      13:55:02:[  380.236822]  [<ffffffff810a5ac0>] ? kthread+0x0/0xe0
      13:55:02:[  380.238250]  [<ffffffff81646b98>] ret_from_fork+0x58/0x90
      13:55:02:[  380.239859]  [<ffffffff810a5ac0>] ? kthread+0x0/0xe0
      

            bzzz Alex Zhuravlev
            di.wang Di Wang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: