LU-8704 osd: add journal info check

check current->journal_info in osd_trans_declare_op()
and ptlrpc_set_wait(), to make sure the current
thread is not holding any journal, otherwise it
may cause deadlock.

Signed-off-by: Di Wang <di.wang@intel.com>
Change-Id: I950a98c15d6359d0601dee40726acc62f4c1e38a